@@ -42,6 +42,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Misc Improvements
 - `confirm`: added a confirmation dialog for removing manager orders
+- `confirm`: allow players to pause the confirmation dialog until they exit the current screen
 - `dfhack-examples-guide`: refine food preparation orders and fix conditions for making jugs and pots in the ``basic`` manager orders
 
 ## Documentation
